$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.259 2005/11/14 15:28:48 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.60
-----------------

PH/01 Two changes to the default runtime configuration:

      (1) Move the checks for relay_from_hosts and authenticated clients from
          after to before the (commented out) DNS black list checks.

      (2) Add control=submission to the relay_from_hosts and authenticated
          clients checks, on the grounds that messages accepted by these
          statements are most likely to be submissions.

PH/02 Several tidies to the handling of ${prvs and ${prvscheck:

      (1) Generate an error if the third argument for the ${prvs expansion is
          not a single digit.

      (2) Treat a missing third argument of ${prvscheck as if it were an empty
          string.

      (3) Reset the variables that are obtained from the first argument of
          ${prvscheck and used in the second argument before leaving the code,
          because their memory is reclaimed, so using them afterwards may do
          silly things.

      (4) Tidy up the code for expanding the arguments of ${prvscheck one by
          one (it's much easier than Tom thought :-).

      (5) Because of (4), we can now allow for the use of $prvscheck_result
          inside the third argument.

PH/03 For some reason, the default setting of PATH when running a command from
      a pipe transport was just "/usr/bin". I have changed it to
      "/bin:/usr/bin".

PH/04 SUPPORT_TRANSLATE_IP_ADDRESS and MOVE_FROZEN_MESSAGES did not cause
      anything to be listed in the output from -bV.

PH/05 When a filter generated an autoreply, the entire To: header line was
      quoted in the delivery log line, like this:

        => >A.N.Other <ano@some.domain> <original@ddress> ...

      This has been changed so that it extracts the operative address. There